Implementing Push notification test